# C-PNG-Preview

./: .gitignore  CMakeLists.txt
resources/: data.txt  testCompressor.py  testFile  testFileUncompressed.txt
src/: bitUtil.c  bitUtil.h  canonicalPrefix.c  canonicalPrefix.h  canonicalPrefixGen.c  canonicalPrefixGen.h  fileIO.c  fileIO.h  inflate.c  inflate.h  main.c  pngChunks.c  pngChunks.h  pngDecoder.c  pngDecoder.h  util.c  util.h
src/inflate/: decoder.c  decoder.h
